--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.properties.org.hibernate.envers.revision_type_field_name=revtype
 
 # Server Configuration
 server.port=8080
+
+# Scheduling Configuration
+spring.task.scheduling.pool.size=2
+spring.task.scheduling.thread-name-prefix=proyectoSaS-scheduler-
